Fixes positioning and visibility of banner

--- a/components/new_replies_banner/new_replies_banner.scss
+++ b/components/new_replies_banner/new_replies_banner.scss
@@ -1,6 +1,6 @@
 .new-replies-banner {
     position: absolute;
-    bottom: 48px;
+    bottom: 56px;
     display: flex;
     justify-content: center;
 
